# llmscope

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
dashboard/app/compare/: page.tsx
dashboard/app/runs/: page.tsx
dashboard/app/runs/[id]/: page.tsx
dashboard/app/runs/compare/: page.tsx
dashboard/components/: LatencyTimeline.tsx  LiveFeed.tsx  ModelComparator.tsx  ModelToggle.tsx  QualityScore.tsx  RunList.tsx  RunsFilter.tsx  TagEditor.tsx  TokenHeatmap.tsx
dashboard/hooks/: useTokenStream.ts
dashboard/lib/: api.ts
dashboard/types/: api.ts
llmscope/: __init__.py  cli.py
llmscope/compare/: __init__.py  engine.py
llmscope/export/: __init__.py  base.py  csv_export.py  json_export.py  report.py
llmscope/proxy/: interceptor.py  server.py
llmscope/proxy/backends/: base.py  llamacpp.py  ollama.py
llmscope/signals/: __init__.py  drift.py  latency.py  quality.py
llmscope/store/: db.py  queries.py  schema.sql
llmscope/types/: __init__.py  config.py  events.py  runs.py  signals.py  stats.py
scripts/: build_dashboard.sh
tests/cli/: test_cli.py
tests/compare/: test_engine.py
tests/export/: test_export.py
tests/fixtures/: sample_stream.jsonl
tests/proxy/: test_api.py  test_backends.py  test_interceptor.py
tests/signals/: test_signals.py
tests/store/: test_store.py
tests/types/: test_config.py  test_events.py  test_runs.py  test_signals.py
