[tool.poetry]
name = "llmscope"
version = "0.1.0"
description = "Local LLM inference observatory for Ollama and llama.cpp"
authors = ["Vivek Vaish <vaishvivek634@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Vivekv634/llmscope"
keywords = ["llm", "ollama", "observability", "inference", "local-ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "llmscope"}]
include = ["llmscope/static/**/*"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
httpx = "^0.27"
duckdb = "^1.0"
click = "^8.1"
numpy = "^1.26"
jinja2 = "^3.1"
anyio = "^4.4"
pydantic = "^2.7"
pydantic-settings = "^2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"

[tool.poetry.scripts]
llmscope = "llmscope.cli:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
